# PyReachability

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: fetch_datasets.sh  grail_vs_bfsdfs.py  make_synthetic.py  results.md  run_benchmark.py
docs/: AI_GUIDE.md  architecture.md  fidelity.md  methods.md
examples/: quickstart.py
src/cpp/: bfl.cpp  bfsdfs.cpp  chaincover.cpp  csr_graph.cpp  dual.cpp  feline.cpp  ferrari.cpp  grail.cpp  gripp.cpp  hl.cpp  ip.cpp  levels.cpp  minpost.cpp  optchaincover.cpp  optimal_tree.cpp  oreach.cpp  pathhop.cpp  pathtree.cpp  pll.cpp  preach.cpp  scc.cpp  tc.cpp  tflabel.cpp  threehop.cpp  tol.cpp  treecover.cpp  treesspi.cpp  two_hop.cpp  twohop.cpp
src/cpp/dynamic/: feline_pk.cpp  graph.cpp  index.cpp  query.cpp  representative.cpp  scc.cpp
src/cpp/include/reachability/: bfl.hpp  bfsdfs.hpp  chaincover.hpp  csr_graph.hpp  dual.hpp  feline.hpp  ferrari.hpp  grail.hpp  gripp.hpp  hl.hpp  ip.hpp  levels.hpp  minpost.hpp  optchaincover.hpp  optimal_tree.hpp  oreach.hpp  pathhop.hpp  pathtree.hpp  pll.hpp  preach.hpp  scc.hpp  tc.hpp  tflabel.hpp  threehop.hpp  tol.hpp  treecover.hpp  treesspi.hpp  two_hop.hpp  twohop.hpp
src/cpp/include/reachability/dynamic/: feline_pk.hpp  graph.hpp  index.hpp  query.hpp  representative.hpp  scc.hpp  xy_ordering.hpp
src/cpp/tests/: test_bfl.cpp  test_bfsdfs.cpp  test_chaincover.cpp  test_csr_graph.cpp  test_dual.cpp  test_dyn_graph.cpp  test_dyn_index.cpp  test_dyn_query.cpp  test_dyn_representative.cpp  test_dyn_scc.cpp  test_dyn_stress.cpp  test_dyn_xy_ordering.cpp  test_feline.cpp  test_feline_pk.cpp  test_ferrari.cpp  test_grail.cpp  test_gripp.cpp  test_hl.cpp  test_ip.cpp  test_optchaincover.cpp  test_oreach.cpp  test_pathhop.cpp  test_pathtree.cpp  test_pll.cpp  test_preach.cpp  test_scc.cpp  test_tc.cpp  test_tflabel.cpp  test_threehop.cpp  test_tol.cpp  test_treecover.cpp  test_treesspi.cpp  test_twohop.cpp
src/pyreachability/: __init__.py  _core.pxd  _core.pyx  _oracle.py  base.py  catalog.py
src/pyreachability/dynamic/: __init__.py  base.py  feline_pk.py
src/pyreachability/static/: __init__.py  approximate_tc.py  baselines.py  chain_cover.py  other.py  tree_cover.py  two_hop.py
tests/: test_bfl.py  test_bfsdfs.py  test_catalog.py  test_chaincover.py  test_dl.py  test_dual.py  test_dynamic_base.py  test_feline.py  test_feline_pk.py  test_ferrari.py  test_grail.py  test_graph.py  test_gripp.py  test_hl.py  test_import.py  test_ip.py  test_optchaincover.py  test_oreach.py  test_paper_examples.py  test_pathhop.py  test_pathtree.py  test_pll.py  test_preach.py  test_property_oracle.py  test_tc_treecover.py  test_tflabel.py  test_threehop.py  test_tol.py  test_treesspi.py  test_twohop.py
tests/paper_examples/: README.md  README_pt.md  _comparators.py  _schema.py  dl.py  dual.py  feline.py  ferrari.py  gripp.py  hl.py  ip.py  optchain.py  oreach.py  pathhop.py  pathtree.py  preach.py  test_comparators.py  test_runner.py  test_runner_selftest.py  test_schema.py  threehop.py  treecover.py  twohop.py
